test/zinc_source/compile_errors/decorators/01_unknown_decorator.zn
// expected-error: unknown decorator 'missing'
@missing
fn value() -> i64 {
    return 1
}

fn main() {
    print(value())
}
